feat: implement retry delay range selection with min/max bounds
Description:
- Add requestDelaySeconds and maxRequestDelaySeconds settings (defaults: 1-100)
- Convert single retry delay to configurable range with exponential backoff clamping
- Update UI to use dual-thumb range slider for min/max selection
- Add comprehensive test coverage for new range settings
- Update all locale translations to reflect range concept

--- a/webview-ui/src/i18n/locales/ca/settings.json
+++ b/webview-ui/src/i18n/locales/ca/settings.json
@@ -96,7 +96,7 @@
 		"retry": {
 			"label": "Reintentar",
 			"description": "Tornar a intentar sol·licituds d'API fallides automàticament quan el servidor retorna una resposta d'error",
-			"delayLabel": "Retard abans de tornar a intentar la sol·licitud"
+			"rangeLabel": "Rang de retard de reintent (min - màx segons)"
 		},
 		"mcp": {
 			"label": "MCP",
