--- a/webview-ui/src/i18n/locales/hi/settings.json
+++ b/webview-ui/src/i18n/locales/hi/settings.json
@@ -96,7 +96,7 @@
 		"retry": {
 			"label": "पुनः प्रयास",
 			"description": "जब सर्वर त्रुटि प्रतिक्रिया देता है तो स्वचालित रूप से विफल API अनुरोधों को पुनः प्रयास करें",
-			"delayLabel": "अनुरोध को पुनः प्रयास करने से पहले विलंब"
+			"rangeLabel": "पुनः प्रयास विलंब सीमा (न्यूनतम - अधिकतम सेकंड)"
 		},
 		"mcp": {
 			"label": "MCP",
