--- a/webview-ui/src/i18n/locales/ru/settings.json
+++ b/webview-ui/src/i18n/locales/ru/settings.json
@@ -96,7 +96,7 @@
 		"retry": {
 			"label": "Повтор",
 			"description": "Автоматически повторять неудачные запросы к API при ошибке сервера",
-			"delayLabel": "Задержка перед повтором запроса"
+			"rangeLabel": "Диапазон задержки повтора (мин - макс секунд)"
 		},
 		"mcp": {
 			"label": "MCP",
