--- a/src/i18n/locales/id/common.json
+++ b/src/i18n/locales/id/common.json
@@ -144,7 +144,7 @@
 			"oauthLoadFailed": "Gagal memuat kredensial OAuth. Silakan autentikasi terlebih dahulu: {{error}}",
 			"tokenRefreshFailed": "Gagal memperbarui token OAuth: {{error}}",
 			"onboardingTimeout": "Operasi onboarding timeout setelah 60 detik. Silakan coba lagi nanti.",
-			"projectDiscoveryFailed": "Tidak dapat menemukan ID proyek. Pastikan Anda sudah terauthentikasi dengan 'gemini auth'.",
+			"projectDiscoveryFailed": "Tidak dapat menemukan ID proyek. Pastikan Anda sudah terautentikasi dengan 'gemini auth'.",
 			"rateLimitExceeded": "Batas kecepatan terlampaui. Batas tier gratis telah tercapai.",
 			"badRequest": "Permintaan tidak valid: {{details}}",
 			"apiError": "Error API Gemini CLI: {{error}}",
