--- a/.changeset/v3.22.1.md
+++ b/.changeset/v3.22.1.md
@@ -2,9 +2,8 @@
 "roo-cline": patch
 ---
 
+- Add Gemini CLI provider for free access to Gemini models (thanks Cline!)
 - Fix undefined mcp command (thanks @qdaxb!)
-- Fix: standardize tooltip delays to 300ms (thanks @hannesrudolph!)
 - Use upstream_inference_cost for OpenRouter BYOK cost calculation and show cached token count (thanks @chrarnoldus!)
-- Add Gemini CLI provider for free access to Gemini models (thanks @hannesrudolph!)
 - Update maxTokens value for qwen/qwen3-32b model on Groq (thanks @KanTakahiro!)
-- Track mode selector opened in telemetry (thanks @mrubens!)
+- Standardize tooltip delays to 300ms
