fix(i18n): Refactor dynamic translation for commit message
Moves the "Generating commit message" notification from VS Code's static NLS to the dynamic i18next infrastructure, ensuring it gets properly translated.

- Simplifies the translation key to `git.generatingCommitMessage`.
- Fixes the i18n setup script to resolve the correct locales path.
- Stabilizes the `t()` helper to prevent race conditions with language changes.
- Removes the now-obsolete key from all `package.nls.*.json` files to clean up the codebase.

--- a/src/i18n/locales/de/common.json
+++ b/src/i18n/locales/de/common.json
@@ -22,6 +22,9 @@
 		"just_this_message": "Nur diese Nachricht",
 		"this_and_subsequent": "Diese und alle nachfolgenden Nachrichten"
 	},
+	"git": {
+		"generatingCommitMessage": "Commit-Nachricht mit {{modelName}} wird generiert..."
+	},
 	"errors": {
 		"invalid_data_uri": "Ungültiges Daten-URI-Format",
 		"error_copying_image": "Fehler beim Kopieren des Bildes: {{errorMessage}}",
