--- a/src/i18n/locales/tr/common.json
+++ b/src/i18n/locales/tr/common.json
@@ -22,6 +22,9 @@
 		"just_this_message": "Sadece bu mesajı",
 		"this_and_subsequent": "Bu ve sonraki tüm mesajları"
 	},
+	"git": {
+		"generatingCommitMessage": "{{modelName}} ile commit mesajı oluşturuluyor..."
+	},
 	"errors": {
 		"invalid_data_uri": "Geçersiz veri URI formatı",
 		"error_copying_image": "Resim kopyalanırken hata oluştu: {{errorMessage}}",
