--- a/src/i18n/locales/zh-CN/common.json
+++ b/src/i18n/locales/zh-CN/common.json
@@ -22,6 +22,9 @@
 		"just_this_message": "仅此消息",
 		"this_and_subsequent": "此消息及所有后续消息"
 	},
+	"git": {
+		"generatingCommitMessage": "正在使用 {{modelName}} 生成提交消息..."
+	},
 	"errors": {
 		"invalid_mcp_config": "项目MCP配置格式无效",
 		"invalid_mcp_settings_format": "MCP设置JSON格式无效。请确保您的设置遵循正确的JSON格式。",
