feat(i18n): Add new language settings translations
Adds translations for pluginLanguage and commitLanguage to the settings panel for all supported languages.

This ensures that the language selection options in the settings view are properly localized, improving the user experience for non-English speakers.

--- a/webview-ui/src/i18n/locales/es/settings.json
+++ b/webview-ui/src/i18n/locales/es/settings.json
@@ -31,6 +31,8 @@
 		"prompts": "Indicaciones",
 		"experimental": "Experimental",
 		"language": "Idioma",
+		"pluginLanguage": "Idioma del Plugin",
+		"commitLanguage": "Idioma del Commit",
 		"about": "Acerca de Roo Code"
 	},
 	"prompts": {
