--- a/webview-ui/src/i18n/locales/fr/settings.json
+++ b/webview-ui/src/i18n/locales/fr/settings.json
@@ -31,6 +31,8 @@
 		"prompts": "Invites",
 		"experimental": "Expérimental",
 		"language": "Langue",
+		"pluginLanguage": "Langue du Plugin",
+		"commitLanguage": "Langue du Commit",
 		"about": "À propos de Roo Code"
 	},
 	"prompts": {
