--- a/webview-ui/src/i18n/locales/it/settings.json
+++ b/webview-ui/src/i18n/locales/it/settings.json
@@ -31,6 +31,8 @@
 		"prompts": "Prompt",
 		"experimental": "Sperimentale",
 		"language": "Lingua",
+		"pluginLanguage": "Lingua del plugin",
+		"commitLanguage": "Lingua del commit",
 		"about": "Informazioni su Roo Code"
 	},
 	"prompts": {
