--- a/webview-ui/src/i18n/locales/ja/settings.json
+++ b/webview-ui/src/i18n/locales/ja/settings.json
@@ -31,6 +31,8 @@
 		"prompts": "プロンプト",
 		"experimental": "実験的",
 		"language": "言語",
+		"pluginLanguage": "プラグインの言語",
+		"commitLanguage": "コミットの言語",
 		"about": "Roo Codeについて"
 	},
 	"prompts": {
