--- a/webview-ui/src/i18n/locales/nl/settings.json
+++ b/webview-ui/src/i18n/locales/nl/settings.json
@@ -31,6 +31,8 @@
 		"prompts": "Prompts",
 		"experimental": "Experimenteel",
 		"language": "Taal",
+		"pluginLanguage": "Plug-in taal",
+		"commitLanguage": "Commit-taal",
 		"about": "Over Roo Code"
 	},
 	"prompts": {
