--- a/webview-ui/src/i18n/locales/pl/settings.json
+++ b/webview-ui/src/i18n/locales/pl/settings.json
@@ -31,6 +31,8 @@
 		"prompts": "Podpowiedzi",
 		"experimental": "Eksperymentalne",
 		"language": "Język",
+		"pluginLanguage": "Język rozszerzenia",
+		"commitLanguage": "Język commita git",
 		"about": "O Roo Code"
 	},
 	"prompts": {
