--- a/webview-ui/src/i18n/locales/tr/settings.json
+++ b/webview-ui/src/i18n/locales/tr/settings.json
@@ -31,6 +31,8 @@
 		"prompts": "Promptlar",
 		"experimental": "Deneysel",
 		"language": "Dil",
+		"pluginLanguage": "Eklenti Dili",
+		"commitLanguage": "Commit Dili",
 		"about": "Roo Code Hakkında"
 	},
 	"prompts": {
