--- a/webview-ui/src/i18n/locales/zh-CN/settings.json
+++ b/webview-ui/src/i18n/locales/zh-CN/settings.json
@@ -31,6 +31,8 @@
 		"prompts": "提示词",
 		"experimental": "实验性",
 		"language": "语言",
+		"pluginLanguage": "插件语言",
+		"commitLanguage": "提交语言",
 		"about": "关于 Roo Code"
 	},
 	"prompts": {
