--- a/webview-ui/src/i18n/locales/de/settings.json
+++ b/webview-ui/src/i18n/locales/de/settings.json
@@ -31,6 +31,8 @@
 		"prompts": "Eingabeaufforderungen",
 		"experimental": "Experimentell",
 		"language": "Sprache",
+		"pluginLanguage": "Plugin-Sprache",
+		"commitLanguage": "Commit-Sprache",
 		"about": "Über Roo Code"
 	},
 	"prompts": {
