--- a/webview-ui/src/i18n/locales/en/settings.json
+++ b/webview-ui/src/i18n/locales/en/settings.json
@@ -31,6 +31,8 @@
 		"prompts": "Prompts",
 		"experimental": "Experimental",
 		"language": "Language",
+		"pluginLanguage": "Plugin Language",
+		"commitLanguage": "Commit Language",
 		"about": "About Roo Code"
 	},
 	"prompts": {
