--- a/webview-ui/src/i18n/locales/id/settings.json
+++ b/webview-ui/src/i18n/locales/id/settings.json
@@ -31,6 +31,8 @@
 		"prompts": "Prompt",
 		"experimental": "Eksperimental",
 		"language": "Bahasa",
+		"pluginLanguage": "Bahasa Plugin",
+		"commitLanguage": "Bahasa Komit",
 		"about": "Tentang Roo Code"
 	},
 	"prompts": {
