--- a/webview-ui/src/i18n/locales/pt-BR/settings.json
+++ b/webview-ui/src/i18n/locales/pt-BR/settings.json
@@ -31,6 +31,8 @@
 		"prompts": "Prompts",
 		"experimental": "Experimental",
 		"language": "Idioma",
+		"pluginLanguage": "Idioma do Plugin",
+		"commitLanguage": "Idioma do Commit",
 		"about": "Sobre"
 	},
 	"prompts": {
