--- a/webview-ui/src/i18n/locales/ru/settings.json
+++ b/webview-ui/src/i18n/locales/ru/settings.json
@@ -31,6 +31,8 @@
 		"prompts": "Промпты",
 		"experimental": "Экспериментальное",
 		"language": "Язык",
+		"pluginLanguage": "Язык плагина",
+		"commitLanguage": "Язык коммита",
 		"about": "О Roo Code"
 	},
 	"prompts": {
