--- a/webview-ui/src/i18n/locales/hi/settings.json
+++ b/webview-ui/src/i18n/locales/hi/settings.json
@@ -521,6 +521,10 @@
 			"name": "प्रायोगिक \"पावर स्टीयरिंग\" मोड का उपयोग करें",
 			"description": "जब सक्षम किया जाता है, तो Roo मॉडल को उसके वर्तमान मोड परिभाषा के विवरण के बारे में अधिक बार याद दिलाएगा। इससे भूमिका परिभाषाओं और कस्टम निर्देशों के प्रति अधिक मजबूत अनुपालन होगा, लेकिन प्रति संदेश अधिक token का उपयोग होगा।"
 		},
+		"AI_COMMIT_MESSAGES": {
+			"name": "AI-संचालित कमिट संदेश सक्षम करें",
+			"description": "जब सक्षम किया जाता है, तो Roo वर्तमान शाखा में परिवर्तनों के आधार पर कमिट संदेश उत्पन्न करने के लिए AI का उपयोग करेगा।"
+		},
 		"MULTI_SEARCH_AND_REPLACE": {
 			"name": "प्रायोगिक मल्टी ब्लॉक diff उपकरण का उपयोग करें",
 			"description": "जब सक्षम किया जाता है, तो Roo मल्टी ब्लॉक diff उपकरण का उपयोग करेगा। यह एक अनुरोध में फ़ाइल में कई कोड ब्लॉक अपडेट करने का प्रयास करेगा।"
