--- a/webview-ui/src/i18n/locales/ko/settings.json
+++ b/webview-ui/src/i18n/locales/ko/settings.json
@@ -521,6 +521,10 @@
 			"name": "실험적 \"파워 스티어링\" 모드 사용",
 			"description": "활성화하면 Roo가 현재 모드 정의의 세부 정보를 모델에 더 자주 상기시킵니다. 이로 인해 역할 정의 및 사용자 지정 지침에 대한 준수가 강화되지만 메시지당 더 많은 token이 사용됩니다."
 		},
+		"AI_COMMIT_MESSAGES": {
+			"name": "AI 기반 커밋 메시지 활성화",
+			"description": "활성화하면 Roo가 현재 브랜치의 변경 사항을 기반으로 커밋 메시지를 생성하기 위해 AI를 사용합니다."
+		},
 		"MULTI_SEARCH_AND_REPLACE": {
 			"name": "실험적 다중 블록 diff 도구 사용",
 			"description": "활성화하면 Roo가 다중 블록 diff 도구를 사용합니다. 이것은 하나의 요청에서 파일의 여러 코드 블록을 업데이트하려고 시도합니다."
