--- a/webview-ui/src/i18n/locales/ru/settings.json
+++ b/webview-ui/src/i18n/locales/ru/settings.json
@@ -521,6 +521,10 @@
 			"name": "Использовать экспериментальный режим \"power steering\"",
 			"description": "Если включено, Roo будет чаще напоминать модели детали текущего режима. Это приведёт к более строгому следованию ролям и инструкциям, но увеличит расход токенов."
 		},
+		"AI_COMMIT_MESSAGES": {
+			"name": "Включить коммиты с помощью ИИ",
+			"description": "Если включено, Roo будет использовать ИИ для генерации сообщений коммитов на основе изменений в текущей ветке."
+		},
 		"MULTI_SEARCH_AND_REPLACE": {
 			"name": "Использовать экспериментальный мультиблочный инструмент диффа",
 			"description": "Если включено, Roo будет использовать мультиблочный инструмент диффа, пытаясь обновить несколько блоков кода за один запрос."
