--- a/webview-ui/src/i18n/locales/ja/settings.json
+++ b/webview-ui/src/i18n/locales/ja/settings.json
@@ -521,6 +521,10 @@
 			"name": "実験的な「パワーステアリング」モードを使用する",
 			"description": "有効にすると、Rooはより頻繁にモデルに現在のモード定義の詳細を思い出させます。これにより、役割定義とカスタム指示へのより強い遵守が実現しますが、メッセージごとにより多くのtokenを使用します。"
 		},
+		"AI_COMMIT_MESSAGES": {
+			"name": "AIによるコミットメッセージを有効にする",
+			"description": "有効にすると、Rooは現在のブランチの変更に基づいてコミットメッセージを生成するためにAIを使用します。"
+		},
 		"MULTI_SEARCH_AND_REPLACE": {
 			"name": "実験的なマルチブロックdiffツールを使用する",
 			"description": "有効にすると、Rooはマルチブロックdiffツールを使用します。これにより、1つのリクエストでファイル内の複数のコードブロックを更新しようとします。"
