--- a/webview-ui/src/i18n/locales/pt-BR/settings.json
+++ b/webview-ui/src/i18n/locales/pt-BR/settings.json
@@ -521,6 +521,10 @@
 			"name": "Usar modo \"direção assistida\" experimental",
 			"description": "Quando ativado, o Roo lembrará o modelo sobre os detalhes da sua definição de modo atual com mais frequência. Isso levará a uma adesão mais forte às definições de função e instruções personalizadas, mas usará mais tokens por mensagem."
 		},
+		"AI_COMMIT_MESSAGES": {
+			"name": "Ativar mensagens de commit com IA",
+			"description": "Quando ativado, o Roo usará IA para gerar mensagens de commit com base nas alterações no branch atual."
+		},
 		"MULTI_SEARCH_AND_REPLACE": {
 			"name": "Usar ferramenta diff de múltiplos blocos experimental",
 			"description": "Quando ativado, o Roo usará a ferramenta diff de múltiplos blocos. Isso tentará atualizar vários blocos de código no arquivo em uma única solicitação."
