--- a/webview-ui/src/i18n/locales/vi/settings.json
+++ b/webview-ui/src/i18n/locales/vi/settings.json
@@ -521,6 +521,10 @@
 			"name": "Sử dụng chế độ \"power steering\" thử nghiệm",
 			"description": "Khi được bật, Roo sẽ nhắc nhở mô hình về chi tiết định nghĩa chế độ hiện tại thường xuyên hơn. Điều này sẽ dẫn đến việc tuân thủ chặt chẽ hơn các định nghĩa vai trò và hướng dẫn tùy chỉnh, nhưng sẽ sử dụng nhiều token hơn cho mỗi tin nhắn."
 		},
+		"AI_COMMIT_MESSAGES": {
+			"name": "Bật tin nhắn commit được hỗ trợ bởi AI",
+			"description": "Khi được bật, Roo sẽ sử dụng AI để tạo tin nhắn commit dựa trên các thay đổi trong nhánh hiện tại."
+		},
 		"MULTI_SEARCH_AND_REPLACE": {
 			"name": "Sử dụng công cụ diff đa khối thử nghiệm",
 			"description": "Khi được bật, Roo sẽ sử dụng công cụ diff đa khối. Điều này sẽ cố gắng cập nhật nhiều khối mã trong tệp trong một yêu cầu."
